# Touchpad-Host

./: .gitignore  CHANGELOG.md  README.md  repository.yaml
touchpad-host/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run.sh
touchpad-host/docs/: APK_ACTIVITY_AUDIT.md  UI_THEME_MODERNIZATION_RESEARCH.md
touchpad-host/scripts/: airtouch_dashboard.py  airtouch_host.py  airtouch_live.py  airtouch_monitor.py  airtouch_service.py  resolve_touchpad_temperature.py  summarize_live_state.py
touchpad-host/src/airtouch4/: __init__.py  capture.py  command_file.py  commands.py  constants.py  error_codes.py  formatting.py  live_log.py  packet.py  profiles.py  state.py
touchpad-host/src/airtouch4/payloads/: __init__.py  client_api.py  common.py  config.py  expanded.py  internal_misc.py  internal_status.py  registry.py  ui_config.py
touchpad-host/src/airtouch4/runtime/: __init__.py  core.py
touchpad-host/src/airtouch4/service/: __init__.py  adaptive.py  adaptive_airtouch.py  adaptive_model.py  adaptive_mpc.py  api.py  commands.py  controller.py  error_resolver.py  ha_client.py  mqtt.py  ui.py
touchpad-host/tests/: test_command_file.py  test_commands.py  test_error_codes.py  test_error_resolver.py  test_formatting.py  test_init_session.py  test_packet.py  test_payloads.py  test_protocol_coverage.py  test_runtime.py  test_service_commands.py  test_service_controller.py  test_session.py  test_state.py  test_touchpad_temperature_resolver.py  test_transaction_queue.py
touchpad-host/translations/: en.yaml
(+35 files in other folders)
