[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airtouch4-touchpad-host"
version = "0.1.0"
description = "Python host for the AirTouch 4 internal RS485 touchpad protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial",
  "fastapi",
  "uvicorn[standard]",
]

[tool.setuptools.packages.find]
where = ["src"]
